--- a/view/css/Style.css
+++ b/view/css/Style.css
@@ -498,6 +498,15 @@ transform: rotate(-90deg);
     font-size: 22px;
 }
 
+
+
+.response {
+    position: absolute;
+    width: 300px;
+    height: 69px;
+    left: 70px;
+    top: 1px;
+}
 .logo {
     position: absolute;
     width: 200px;
@@ -635,8 +644,16 @@ button a {
 
   .hide{
     display: none;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    color: blue;
   }
 
+  .hideresponse{
+    display: none;
+    font-style: italic;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    color: blue;
+  }
   .admin-wrapper {
     position: relative;
     width: 1440px;
